package ml.alessiomanai.streamingtv.utils;

public class StreamingTVConstants {

    public final static String LATEST_VERSION = "https://github.com/alessiomanai/StreamingTV/releases/latest";
}
