@startuml
class ml.alessiomanai.streamingtv.connessione.UnsecureHandshake {
+ {static} void handleSSLHandshake()
}

class ml.alessiomanai.streamingtv.connessione.CheckUpdatesCallable {
- String getLatestVersion()
+ Boolean call()
}

class ml.alessiomanai.streamingtv.utils.StreamingTVConstants {
+ {static} String LATEST_VERSION
}

class ml.alessiomanai.streamingtv.connessione.WebRequest {
+ {static} int GET
+ {static} int POST
+ String makeWebServiceCall(String,int)
+ String makeWebServiceCall(String,int,HashMap<String,String>)
}


class ml.alessiomanai.streamingtv.MainActivity {
~ String JSON_URL
~ Button foodNetwork
~ Button radioItaliaTv
~ Button videolina
~ Button canale5
~ Button tv8
~ Button italia1
~ Button topcrime
~ Button giallo
~ Button rete4
~ Button iris
- ArrayList<JSONObject> finalListaCanali
# void onCreate(Bundle)
- void startChannel(String)
- void startChannelUnsecure(String)
- void noInternet(Context)
- void aggiornamentoApplicazione(Context)
- ArrayList<JSONObject> caricaCanali()
}


class ml.alessiomanai.streamingtv.connessione.ChannelUpdaterCallable {
+ ArrayList<JSONObject> getAssetJsonData(String)
+ ArrayList<JSONObject> call()
}

class ml.alessiomanai.streamingtv.ChannelExoPlayer {
- ExoPlayer player
# void onCreate(Bundle)
# void onDestroy()
~ void stop()
~ void play(MediaItem)
}


class ml.alessiomanai.streamingtv.canali.UnsecureChannelPlayer {
# void onCreate(Bundle)
}



java.util.concurrent.Callable <|.. ml.alessiomanai.streamingtv.connessione.CheckUpdatesCallable
androidx.appcompat.app.AppCompatActivity <|-- ml.alessiomanai.streamingtv.MainActivity
java.util.concurrent.Callable <|.. ml.alessiomanai.streamingtv.connessione.ChannelUpdaterCallable
androidx.appcompat.app.AppCompatActivity <|-- ml.alessiomanai.streamingtv.ChannelExoPlayer
ml.alessiomanai.streamingtv.ChannelExoPlayer <|-- ml.alessiomanai.streamingtv.canali.UnsecureChannelPlayer
@enduml